--- a/VK_app/Base.lproj/Main.storyboard
+++ b/VK_app/Base.lproj/Main.storyboard
@@ -138,8 +138,8 @@
         <!--Друзья-->
         <scene sceneID="PWl-tg-cTe">
             <objects>
-                <tableViewController id="RNe-Ku-xoU" customClass="FriendsList" customModule="VK_app" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="75" estimatedRowHeight="85" sectionHeaderHeight="1" sectionFooterHeight="1" id="fn7-Tv-Hkf">
+                <tableViewController id="RNe-Ku-xoU" customClass="FriendsViewController" customModule="VK_app" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="75" estimatedRowHeight="85" sectionHeaderHeight="25" sectionFooterHeight="1" id="fn7-Tv-Hkf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -151,7 +151,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="347.5" height="75"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Ava" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nrB-pn-fpP">
+                                        <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Ava" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nrB-pn-fpP">
                                             <rect key="frame" x="15" y="12.5" width="50" height="50"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="nrB-pn-fpP" secondAttribute="height" multiplier="1:1" id="LmW-Rr-VmV"/>
@@ -164,17 +164,27 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9BY-fi-QWM" customClass="CircleShadowImge" customModule="VK_app" customModuleProvider="target">
+                                            <rect key="frame" x="15" y="12.5" width="50" height="50"/>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        </view>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstItem="9BY-fi-QWM" firstAttribute="bottom" secondItem="nrB-pn-fpP" secondAttribute="bottom" id="4r6-cQ-J9s"/>
                                         <constraint firstItem="nrB-pn-fpP" firstAttribute="centerY" secondItem="V3o-Gk-U8X" secondAttribute="centerY" id="JDM-ZU-TEY"/>
                                         <constraint firstItem="mb4-yH-v9w" firstAttribute="leading" secondItem="nrB-pn-fpP" secondAttribute="trailing" constant="20" id="RRd-gI-QPv"/>
+                                        <constraint firstItem="9BY-fi-QWM" firstAttribute="leading" secondItem="nrB-pn-fpP" secondAttribute="leading" id="e1w-tI-KVX"/>
                                         <constraint firstItem="nrB-pn-fpP" firstAttribute="leading" secondItem="V3o-Gk-U8X" secondAttribute="leading" constant="15" id="hvb-Qj-Yb0"/>
+                                        <constraint firstItem="9BY-fi-QWM" firstAttribute="top" secondItem="nrB-pn-fpP" secondAttribute="top" id="j2p-gt-Zpa"/>
+                                        <constraint firstItem="9BY-fi-QWM" firstAttribute="trailing" secondItem="nrB-pn-fpP" secondAttribute="trailing" id="rB9-Vi-Dkw"/>
                                         <constraint firstItem="mb4-yH-v9w" firstAttribute="centerY" secondItem="V3o-Gk-U8X" secondAttribute="centerY" id="ysR-H0-FOB"/>
                                         <constraint firstAttribute="trailing" secondItem="mb4-yH-v9w" secondAttribute="trailing" constant="10" id="zgm-dH-Rbu"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="FriendView" destination="mb4-yH-v9w" id="YqQ-sz-h07"/>
+                                    <outlet property="avatar" destination="nrB-pn-fpP" id="MEP-YB-FWp"/>
+                                    <outlet property="shadowAvatar" destination="9BY-fi-QWM" id="x59-ig-Pco"/>
+                                    <outlet property="userName" destination="mb4-yH-v9w" id="HPM-wD-yxh"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -243,7 +253,7 @@
         <scene sceneID="e60-6p-Gvb">
             <objects>
                 <navigationController id="szG-5j-rwN" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Друзья" image="person" catalog="system" id="6VX-mF-4iK"/>
+                    <tabBarItem key="tabBarItem" title="Друзья" image="person.fill" catalog="system" id="6VX-mF-4iK"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="GDP-mt-odu">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -316,7 +326,7 @@
         <!--Список групп-->
         <scene sceneID="dLf-S4-uTB">
             <objects>
-                <tableViewController title="Список групп" id="5XA-5T-A0R" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="GroupsView" title="Список групп" id="5XA-5T-A0R" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="75" sectionHeaderHeight="28" sectionFooterHeight="28" id="TZ7-ym-0n0">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -346,7 +356,7 @@
         <scene sceneID="J3Q-zO-Zmd">
             <objects>
                 <navigationController id="SNX-US-IRP" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Группы" image="person.3" catalog="system" id="trb-4u-YF7"/>
+                    <tabBarItem key="tabBarItem" title="Группы" image="person.3.fill" catalog="system" id="trb-4u-YF7"/>
                     <navigationItem key="navigationItem" id="c0i-Xw-cZK"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4T6-yj-S6J">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -405,8 +415,9 @@
     <resources>
         <image name="Ava" width="211" height="211"/>
         <image name="Foto" width="269" height="383"/>
-        <image name="person" catalog="system" width="64" height="60"/>
         <image name="person.3" catalog="system" width="72" height="36"/>
+        <image name="person.3.fill" catalog="system" width="72" height="35"/>
+        <image name="person.fill" catalog="system" width="64" height="60"/>
         <image name="vk_logo_180" width="180" height="180"/>
     </resources>
 </document>
